May mga template na ung ibang pages...

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,44 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Capstone 3</title>
+    <style type="text/css">
+      
+      body{
+        padding-top: 100px !important;
+      }
+
+      .navbar-link , .navbar-item , .logout{
+        color: #f6f6f6 !important;
+      }
+
+      .navbar-item:hover{
+        color: black !important;
+      }
+
+      .navbar-dropdown{
+        background-color: black !important;
+      }
+
+      .navbar-item.is-hoverable:focus-within .navbar-dropdown {
+          display: none !important;
+      }
+
+
+      ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+        color: #b4adcd !important;
+        opacity: 1; /* Firefox */
+      }
+
+      :-ms-input-placeholder { /* Internet Explorer 10-11 */
+        color: #b4adcd !important;
+      }
+
+      ::-ms-input-placeholder { /* Microsoft Edge */
+        color: #b4adcd !important;
+      }
+
+
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
