Meron nang layout ung pinaka minimum viable na pwedeng e present

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -43,9 +45,9 @@
         background-color: black !important;
       }
 
-      .navbar-item.is-hoverable:focus-within .navbar-dropdown {
+      /*.navbar-item.is-hoverable:focus-within .navbar-dropdown {
           display: none !important;
-      }
+      }*/
 
 
       ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
