--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,13 @@
     <style type="text/css">
       
       body{
-        padding-top: 100px !important;
+        padding-top: 70px !important;
+        background: url(/assets/bg/3.jpg) no-repeat center center fixed; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        height: 100vh;
       }
 
       .navbar-link , .navbar-item , .logout{
@@ -62,6 +68,7 @@
       ::-ms-input-placeholder { /* Microsoft Edge */
         color: #b4adcd !important;
       }
+
 
 
     </style>
