Meron nang update admin

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 
       #root{
         padding-top: 70px !important;
-        height: 100vh;
+        min-height: 100vh;
       }
 
       .navbar-link , .navbar-item , .logout{
@@ -74,6 +74,11 @@
         color: #b4adcd !important;
       }
 
+
+      .checkbox input, .radio input {
+          width: 20px;
+          height: 20px;
+      }
 
 
     </style>
