--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Capstone 3</title>
+    <title>EyeSecure A.I.</title>
     <style type="text/css">
       
       body{
